feat(business): add initial business page (#17)
