# api/account/models/accountDto.go
@@ -1,0 +1,8 @@
+package models
+
+type AccountDto struct {
+	ID         uint   `json:"id"`
+	Name       string `json:"name"`
+	Username   string `json:"username" gorm:"unique"`
+	BusinessId *uint  `json:"businessId,omitempty"`
+}
