# api/database/entities/account.go
@@ -1,10 +1,14 @@
 package entities
 
+import "gorm.io/gorm"
+
 type Account struct {
-	IdentAccount  uint64    `json:"identAccount" gorm:"primaryKey;autoIncrement"`
-	Name          string    `json:"name"`
-	IdentBusiness *uint64   `json:"identBusiness" gorm:"uniqueIndex"`
-	Username      string    `json:"username" gorm:"unique"`
-	PasswordHash  string    `json:"-"`
-	Business      *Business `gorm:"foreignKey:IdentBusiness;references:IdentBusiness;constraint:OnDelete:SET NULL"`
+	gorm.Model
+	Name         string `json:"name"`
+	Username     string `json:"username" gorm:"unique"`
+	PasswordHash string `json:"-"`
+
+	OwnedBusinesses []Business `gorm:"foreignKey:OwnerID"`
+
+	MemberOf []Business `gorm:"many2many:business_employees;"`
 }
