# api/database/entities/business.go
@@ -1,11 +1,21 @@
 package entities
 
+import "gorm.io/gorm"
+
 type Business struct {
-	IdentBusiness     uint64  `json:"identBusiness" gorm:"primaryKey;autoIncrement"`
-	Name              string  `json:"name"`
-	IdentOwnerAccount uint64  `json:"identOwnerAccount"`
-	Address           string  `json:"address"`
-	Phone             string  `json:"phone"`
-	Email             string  `json:"email"`
-	OwnerAccount      Account `gorm:"foreignKey:IdentOwnerAccount;references:IdentAccount;constraint:OnDelete:RESTRICT"`
+	gorm.Model
+	Name    string `json:"name"`
+	Address string `json:"address"`
+	Phone   string `json:"phone"`
+	Email   string `json:"email"`
+
+	OwnerID uint    `json:"ownerId,omitempty"`
+	Owner   Account `gorm:"foreignKey:OwnerID"`
+
+	Employees []Account `gorm:"many2many:business_employees;"`
+}
+
+type BusinessEmployees struct {
+	BusinessID uint `gorm:"primaryKey"`
+	AccountID  uint `gorm:"primaryKey"`
 }
